--- a/package.json
+++ b/package.json
@@ -9,11 +9,14 @@
     "@testing-library/user-event": "^12.1.10",
     "@types/jest": "^26.0.15",
     "@types/node": "^12.0.0",
+    "@types/prettier": "^2.4.2",
     "@types/react-dom": "^17.0.0",
     "axios": "^0.24.0",
+    "bulmaswatch": "^0.8.1",
     "esbuild-wasm": "0.8.27",
     "localforage": "^1.10.0",
     "monaco-editor": "0.30.1",
+    "prettier": "^2.5.1",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-scripts": "4.0.3",
