--- a/package.json
+++ b/package.json
@@ -8,14 +8,17 @@
     "@testing-library/react": "^11.1.0",
     "@testing-library/user-event": "^12.1.10",
     "@types/jest": "^26.0.15",
+    "@types/jscodeshift": "0.7.2",
     "@types/node": "^12.0.0",
     "@types/prettier": "^2.4.2",
     "@types/react-dom": "^17.0.0",
     "axios": "^0.24.0",
     "bulmaswatch": "^0.8.1",
     "esbuild-wasm": "0.8.27",
+    "jscodeshift": "0.11.0",
     "localforage": "^1.10.0",
     "monaco-editor": "0.30.1",
+    "monaco-jsx-highlighter": "0.0.15",
     "prettier": "^2.5.1",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
