--- a/package.json
+++ b/package.json
@@ -12,8 +12,10 @@
     "@types/node": "^12.0.0",
     "@types/prettier": "^2.4.2",
     "@types/react-dom": "^17.0.0",
+    "@types/react-redux": "7.1.15",
     "@types/react-resizable": "1.7.2",
-    "axios": "^0.24.0",
+    "@uiw/react-md-editor": "2.1.1",
+    "axios": "0.21.1",
     "bulmaswatch": "^0.8.1",
     "esbuild-wasm": "0.8.27",
     "jscodeshift": "0.11.0",
@@ -23,8 +25,11 @@
     "prettier": "^2.5.1",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-redux": "7.2.2",
     "react-resizable": "1.11.0",
     "react-scripts": "4.0.3",
+    "redux": "4.0.5",
+    "redux-thunk": "2.3.0",
     "typescript": "^4.1.2",
     "web-vitals": "^1.0.1"
   },
