--- a/package.json
+++ b/package.json
@@ -4,34 +4,37 @@
   "private": true,
   "dependencies": {
     "@monaco-editor/react": "3.7.5",
-    "@testing-library/jest-dom": "^5.11.4",
-    "@testing-library/react": "^11.1.0",
-    "@testing-library/user-event": "^12.1.10",
-    "@types/jest": "^26.0.15",
+    "@testing-library/jest-dom": "^5.11.8",
+    "@testing-library/react": "^11.2.2",
+    "@testing-library/user-event": "^12.6.0",
+    "@types/jest": "^26.0.19",
     "@types/jscodeshift": "0.7.2",
-    "@types/node": "^12.0.0",
-    "@types/prettier": "^2.4.2",
-    "@types/react-dom": "^17.0.0",
+    "@types/node": "^12.19.11",
+    "@types/prettier": "^2.1.6",
+    "@types/react": "^16.14.2",
+    "@types/react-dom": "^16.9.10",
     "@types/react-redux": "7.1.15",
     "@types/react-resizable": "1.7.2",
     "@uiw/react-md-editor": "2.1.1",
     "axios": "0.21.1",
     "bulmaswatch": "^0.8.1",
     "esbuild-wasm": "0.8.27",
+    "immer": "^8.0.0",
     "jscodeshift": "0.11.0",
-    "localforage": "^1.10.0",
+    "localforage": "^1.9.0",
     "monaco-editor": "0.30.1",
     "monaco-jsx-highlighter": "0.0.15",
-    "prettier": "^2.5.1",
-    "react": "^17.0.2",
-    "react-dom": "^17.0.2",
+    "prettier": "^2.2.1",
+    "react": "^17.0.1",
+    "react-dom": "^17.0.1",
     "react-redux": "7.2.2",
     "react-resizable": "1.11.0",
-    "react-scripts": "4.0.3",
+    "react-scripts": "4.0.1",
+    "react-split": "2.0.9",
     "redux": "4.0.5",
     "redux-thunk": "2.3.0",
-    "typescript": "^4.1.2",
-    "web-vitals": "^1.0.1"
+    "typescript": "^4.1.3",
+    "web-vitals": "^0.2.4"
   },
   "scripts": {
     "start": "react-scripts start",
